# tetsu

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: login.rs
res/: favicon.xcf  logo.xcf
scripts/graph/: graph.py  requirements.txt
src/: crypto.rs  encryption.rs  errors.rs  event.rs  lib.rs  macros.rs  mojang.rs  serialization.rs  tests.rs  user.rs
src/client/: connection.rs  mod.rs
src/event/: dispatcher.rs  mod.rs  types.rs
src/packet/: mod.rs  serializable.rs  types.rs
src/server/: connection.rs  mod.rs
src/tests/: crypto.rs  mod.rs  serialization.rs
src/versions/: README.md  STRUCTURE.md  common.rs  macros.rs  mod.rs  v47.rs  v47_old.rs  v754.rs  v754_old.rs
tetsu_derive/: Cargo.toml
tetsu_derive/src/: lib.rs  readable.rs  writable.rs
