[package]
name = "tetsu"
license = "MIT"
readme = "README.md"
version = "0.0.1-alpha.1"
description = "A prototype interface to Minecraft's server protocol."
repository = "https://github.com/schctl/tetsu/"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
# Crypto
aes = "^0.7"
cfb8 = "^0.7"
openssl = "^0.10"

# Misc
log = "^0.4"
ureq = "^2.1"
flate2 = "^1.0"

# Serialization
byteorder = "^1.4"
hematite-nbt = "^0.5"
uuid = { version = "^0.8", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_repr = "^0.1"
serde_json = "^1.0"
